--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+
+  "homepage": "http://ksushant6566.github.io/visual-algos",
   "name": "sorting-visualizer",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +14,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
